Add flag(-bce) on clipboard brush command